# rust-js-wasm

./: .gitignore  LICENSE  app.js  test.js
javascript/: network.js  test.js
javascript/utils/: activation.js  dataset_node.js  layer.js  propagation.js  utils.js
node/: IndexedDB.md  app.js
node/wasm/interfaces/: Cargo.toml  test.js
node/wasm/interfaces/src/: lib.rs  quantization.rs  utils.rs  utils_64.rs
node/www/tcp/js/: files.js  test.js  utils.js  wasm.js
node/www/templates/: index.html
python/: dataset.py  index.html  layer.py  network.py  python-for-odide.py  test.py  utils.py
python/js/: predict.js  python.js  utils.js
rust/: Cargo.toml
rust/network/: Cargo.toml
rust/network/src/: lib.rs
rust/neural/: Cargo.toml
rust/neural/src/: main.rs
rust/quantization/: Cargo.toml
rust/quantization/src/: lib.rs
rust/quantization/src/model/: mod.rs
rust/quantization/src/nn/: array.rs  func.rs  linear.rs  mod.rs  module.rs  optimizer.rs  quantize.rs  sequential.rs  variables.rs
rust/test_quan/: Cargo.toml
rust/test_quan/src/: main.rs
rust/utils/: Cargo.toml
rust/utils/src/: lib.rs
rust/utils/src/activation/: mod.rs
rust/utils/src/dataset/: mnist.rs
rust/utils/src/layer/: mod.rs
rust/utils/src/network/: activation.rs  mod.rs
rust/utils/src/propagation/: mod.rs
rust/utils/src/quantization/: mod.rs
rust/utils/src/trained/: mod.rs
rust/utils/src/utils/: mod.rs
tests/: Cargo.toml
tests/src/: main.rs
utils/: Utils.js
www/tcp/js/: predict.js  utils.js
www/templates/: index-copy.html  index.html
