[package]
name = "tests"
version = "0.1.0"
authors = ["SimonWang9610 <55259373+SimonWang9610@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13"
rand = "0.7.3"
ndarray-rand = "0.11.0"
rustc-serialize2 = "0.3.25"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.57"