[package]
name = "network"
version = "0.1.0"
authors = ["SimonWang9610 <55259373+SimonWang9610@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = "0.13"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.57"
wasm-bindgen = "0.2.67"
cfg-if = "0.1.10"
utils = {path = "../utils"}